# MONEFY

./: CMakeLists.txt  CONVERSION_GUIDE.md  Makefile  POWERSHELL_GUIDE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  build.bat  build.ps1  currency_converter.cpp  currency_converter.hpp  install.sh  main.cpp  setup_windows.bat  setup_windows.ps1  transaction.cpp  transaction.hpp  transaction_manager.cpp  transaction_manager.hpp  transactions.csv  use_this.md  vcpkg.json
